Move social icons up to prevent mobile browser bars from clipping

--- a/src/css/App/App.css
+++ b/src/css/App/App.css
@@ -98,7 +98,7 @@
 
     .socialIconsWrapper {
         position: fixed;
-        bottom: 0;
+        bottom: 2rem;
         height: 15vh;
     }
 
@@ -211,7 +211,7 @@
 
     .socialIconsWrapper {
         position: fixed;
-        bottom: 0;
+        bottom: 2rem;
         height: 15vh;
     }
 
@@ -325,7 +325,7 @@
 
     .socialIconsWrapper {
         position: fixed;
-        bottom: 0;
+        bottom: 2rem;
         height: 15vh;
     }
 
@@ -440,7 +440,7 @@
 
     .socialIconsWrapper {
         position: fixed;
-        bottom: 0;
+        bottom: 2rem;
         height: 15vh;
     }
 
